# DeadlineForYou

./: .env.example  .gitignore  README.md  blueprint.md  initialize.py  pyproject.toml
data/: deadlineforyou.db
deadlineforyou/: architecture.md  config.py  domain.py  main.py  mcp_server.py  prompts.py  providers.py  rules.py  schemas.py  service.py  storage.py  telegram_bot.py  tools.py
docs/: mcp.md  opencode.md  test-ja-ko-01.txt  test-ja-ko-02.txt  test-ja-ko-03.txt
