[project]
name = "deadlineforyou"
version = "0.1.0"
description = "Deadline enforcement bot for freelance translators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "openai>=1.68.2",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "python-telegram-bot>=21.10",
  "torch>=2.6.0",
  "transformers>=4.57.0",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deadlineforyou*"]
